# talos-rust-client

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  Makefile  README.md  RELEASE_NOTES.md  build.rs  rustfmt.toml
.github/: dependabot.yml  release-drafter.yml
.github/workflows/: ci.yml  crate-release.yml  lint.yml  release-drafter.yml  release.yml  smart-release.yml
examples/: events.rs  health.rs  talosconfig_connect.rs  version.rs
scripts/: release.sh
src/: connector.rs  error.rs  lib.rs  talosconfig.rs
