[package]
name = "talos-rust-client"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
description = "Rust gRPC client for SideroLabs Talos (mTLS, tonic, rustls)"
repository = "https://github.com/nuditech/talos-rust-client"
homepage = "https://github.com/nuditech/talos-rust-client"
documentation = "https://docs.rs/talos-rust-client"
readme = "README.md"
categories = ["api-bindings", "network-programming"]
keywords = ["talos", "siderolabs", "grpc", "mtls", "kubernetes"]
authors = ["Nuditech Team"]

[features]
default = ["tls-rustls"]
tls-rustls = []
talosconfig = ["serde_yaml", "base64"]

[dependencies]
tokio = { version = "1.42", features = ["macros", "rt-multi-thread"] }
tonic = { version = "0.12", features = ["tls", "tls-roots"] }
tower = "0.4"
prost = "0.13"
prost-types = "0.13"
tracing = "0.1"
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pemfile = "2"
anyhow = "1"
thiserror = "2"
futures-util = "0.3"
url = "2"

serde = { version = "1", features = ["derive"] }

# Optional dependencies for talosconfig feature
serde_yaml = { version = "0.9", optional = true }
base64 = { version = "0.22", optional = true }

[build-dependencies]
tonic-build = { version = "0.12", features = ["prost"] }
prost-build = "0.13"

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[example]]
name = "version"
required-features = ["tls-rustls"]

[[example]]
name = "health"
required-features = ["tls-rustls"]

[[example]]
name = "events"
required-features = ["tls-rustls"]

[[example]]
name = "talosconfig_connect"
required-features = ["talosconfig"]

[lib]
doctest = false
